[package]
name = "huskhoard"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
blake3 = "1.5"
uuid = { version = "1.8", features = ["v4"] }
bytemuck = { version = "1.15", features = ["derive"] }
crc32fast = "1.4"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
zstd = "0.13"
xattr = "1.3"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4.44"
serde_json = "1.0.149"
